Fix commulative image shift

--- a/src/styles/layout.sass
+++ b/src/styles/layout.sass
@@ -249,6 +249,7 @@ body
       transform: scale(1.01)
 
   img
+    height: auto
     width: 100%
 
 .post-title
