--- a/src/styles/pages/works.sass
+++ b/src/styles/pages/works.sass
@@ -26,6 +26,7 @@
   overflow: hidden 
 
   img
+    height: auto
     width: 100%
     display: block
     transition: transform .5s
